Split compiler definitions up into blocks. Made the inclusion of libm (math library) dependent on the platform/compiler.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,9 +135,43 @@ foreach (LACE_TASKPARAMETER RANGE 1 8)
 	)
 endforeach()
 
-set(CMAKE_C_FLAGS "-g -O3 -Wall -Wextra")
-
-set(lace_flags "${HWLOC_DEF};${LACE_PIE};${LACE_COUNT_TASKS};${LACE_COUNT_STEALS};${LACE_COUNT_SPLITS}")
+if(CMAKE_COMPILER_IS_GNUCC)
+    set(CMAKE_C_FLAGS "-g -O3 -Wall -Wextra")
+	add_definitions("-D${HWLOC_DEF}")
+	add_definitions("-D${LACE_PIE}")
+	add_definitions("-D${LACE_COUNT_TASKS}")
+	add_definitions("-D${LACE_COUNT_STEALS}")
+	add_definitions("-D${LACE_COUNT_SPLITS}")
+	
+	set(PTHREAD_LIB "pthread")
+	set(LACE_ADDITIONAL_SOURCES "")
+elseif(MSVC)
+    add_definitions("/D${HWLOC_DEF}")
+	add_definitions("/D${LACE_PIE}")
+	add_definitions("/D${LACE_COUNT_TASKS}")
+	add_definitions("/D${LACE_COUNT_STEALS}")
+	add_definitions("/D${LACE_COUNT_SPLITS}")
+	
+	add_definitions("/DNOGDI /DWIN32_LEAN_AND_MEAN")
+	add_definitions("/D_USE_MATH_DEFINES") # to define M_PI
+	add_definitions("/D_CRT_RAND_S") # to define rand_s
+	add_definitions("/D_CRT_SECURE_NO_WARNINGS") # to silcence "use foo_s instead of foo" warnings
+	
+	set(LACE_ADDITIONAL_SOURCES "${PROJECT_SOURCE_DIR}/windows/getopt.h" "${PROJECT_SOURCE_DIR}/windows/windowsHelper.h" "${PROJECT_SOURCE_DIR}/windows/windowsHelper.c" "${PROJECT_SOURCE_DIR}/windows/winpthreads.h")
+	# this adds the CMakeLists.txt project in the windows/ folder, which defines the getopt library replacement for windows.
+	add_subdirectory("${PROJECT_SOURCE_DIR}/windows")
+	set(PTHREAD_LIB "")
+else(CLANG)
+    set(CMAKE_C_FLAGS "-g -O3 -Wall -Wextra")
+	add_definitions("-D${HWLOC_DEF}")
+	add_definitions("-D${LACE_PIE}")
+	add_definitions("-D${LACE_COUNT_TASKS}")
+	add_definitions("-D${LACE_COUNT_STEALS}")
+	add_definitions("-D${LACE_COUNT_SPLITS}")
+	
+	set(PTHREAD_LIB "pthread")
+	set(LACE_ADDITIONAL_SOURCES "")
+endif()
 
 # Import the CHECK_INCLUDE_FILES macros
 include(CheckIncludeFiles)
@@ -193,110 +227,184 @@ configure_file (
 
 set(uts_sources benchmarks/uts/rng/brg_sha1.c benchmarks/uts/rng/brg_sha1.h benchmarks/uts/uts.c)
 
-add_executable(fib-seq benchmarks/fib/fib-seq.c)
-target_link_libraries(fib-seq m)
+add_executable(fib-seq benchmarks/fib/fib-seq.c ${LACE_ADDITIONAL_SOURCES})
+if (UNIX)
+	target_link_libraries(fib-seq m)
+endif()
 
-add_executable(fib-seq2 benchmarks/fib/fib-seq2.c)
-target_link_libraries(fib-seq2 m)
+add_executable(fib-seq2 benchmarks/fib/fib-seq2.c ${LACE_ADDITIONAL_SOURCES})
+if (UNIX)
+	target_link_libraries(fib-seq2 m)
+endif()
 
-add_executable(fib-lace benchmarks/fib/fib-lace.c lace-1.c lace-1.h)
-set_target_properties(fib-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(fib-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(fib-lace pthread m ${HWLOC_LIB})
+add_executable(fib-lace benchmarks/fib/fib-lace.c "${PROJECT_BINARY_DIR}/lace-1.c" lace-1.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(fib-lace getopt)
+endif()
+target_link_libraries(fib-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(fib-lace m)
+endif()
 
 # add_executable(fib-lace-prof benchmarks/fib/fib-lace.c lace-1.c lace-1.h)
 # set_target_properties(fib-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 # set_target_properties(fib-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-# target_link_libraries(fib-lace-prof pthread m profiler ${HWLOC_LIB})
+# target_link_libraries(fib-lace-prof ${PTHREAD_LIB} m profiler ${HWLOC_LIB})
 
-add_executable(pi-lace benchmarks/pi/pi-lace.c lace-2.c lace-2.h)
-set_target_properties(pi-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(pi-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(pi-lace pthread m ${HWLOC_LIB})
+add_executable(pi-lace benchmarks/pi/pi-lace.c "${PROJECT_BINARY_DIR}/lace-2.c" lace-2.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(pi-lace getopt)
+endif()
+target_link_libraries(pi-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(pi-lace m)
+endif()
 
-add_executable(pi-seq benchmarks/pi/pi-seq.c)
-target_link_libraries(pi-seq m)
+add_executable(pi-seq benchmarks/pi/pi-seq.c ${LACE_ADDITIONAL_SOURCES})
+target_link_libraries(pi-seq ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(pi-seq m)
+endif()
 
-add_executable(pi-seq2 benchmarks/pi/pi-seq2.c)
-target_link_libraries(pi-seq2 m)
+add_executable(pi-seq2 benchmarks/pi/pi-seq2.c ${LACE_ADDITIONAL_SOURCES})
+target_link_libraries(pi-seq2 ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(pi-seq2 m)
+endif()
 
-add_executable(uts-seq ${uts_sources} benchmarks/uts/uts-seq.c)
+add_executable(uts-seq ${uts_sources} benchmarks/uts/uts-seq.c ${LACE_ADDITIONAL_SOURCES})
 set_target_properties(uts-seq PROPERTIES COMPILE_DEFINITIONS "BRG_C99_TYPES;BRG_RNG")
-target_link_libraries(uts-seq m)
+target_link_libraries(uts-seq ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(uts-seq m)
+endif()
 
-add_executable(uts2-lace ${uts_sources} benchmarks/uts/uts2-lace.c lace-2.c lace-2.h)
+add_executable(uts2-lace ${uts_sources} benchmarks/uts/uts2-lace.c "${PROJECT_BINARY_DIR}/lace-2.c" lace-2.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(uts2-lace getopt)
+endif()
 set_target_properties(uts2-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(uts2-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
-target_link_libraries(uts2-lace m pthread ${HWLOC_LIB})
+set_target_properties(uts2-lace PROPERTIES COMPILE_DEFINITIONS "BRG_C99_TYPES;BRG_RNG")
+target_link_libraries(uts2-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(uts2-lace m)
+endif()
 
-add_executable(uts-lace ${uts_sources} benchmarks/uts/uts-lace.c lace-2.c lace-2.h)
+add_executable(uts-lace ${uts_sources} benchmarks/uts/uts-lace.c "${PROJECT_BINARY_DIR}/lace-2.c" lace-2.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(uts-lace getopt)
+endif()
 set_target_properties(uts-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(uts-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
-target_link_libraries(uts-lace m pthread ${HWLOC_LIB})
+set_target_properties(uts-lace PROPERTIES COMPILE_DEFINITIONS "BRG_C99_TYPES;BRG_RNG")
+target_link_libraries(uts-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(uts-lace m)
+endif()
 
 # add_executable(uts-lace-prof ${uts_sources} benchmarks/uts/uts-lace.c lace-2.c lace-2.h)
 # set_target_properties(uts-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 # set_target_properties(uts-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
-# target_link_libraries(uts-lace-prof m pthread profiler ${HWLOC_LIB})
+# target_link_libraries(uts-lace-prof m ${PTHREAD_LIB} profiler ${HWLOC_LIB})
 
-add_executable(queens-lace benchmarks/queens/queens-lace.c lace-3.c lace-3.h)
-set_target_properties(queens-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(queens-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(queens-lace pthread m ${HWLOC_LIB})
+add_executable(queens-lace benchmarks/queens/queens-lace.c "${PROJECT_BINARY_DIR}/lace-3.c" lace-3.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(queens-lace getopt)
+endif()
+target_link_libraries(queens-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(queens-lace m)
+endif()
 
 # add_executable(queens-lace-prof benchmarks/queens/queens-lace.c lace-3.c lace-3.h)
 # set_target_properties(queens-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 # set_target_properties(queens-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-# target_link_libraries(queens-lace-prof pthread m profiler ${HWLOC_LIB})
+# target_link_libraries(queens-lace-prof ${PTHREAD_LIB} m profiler ${HWLOC_LIB})
 
-add_executable(queens-seq benchmarks/queens/queens-seq.c)
-target_link_libraries(queens-seq m)
+add_executable(queens-seq benchmarks/queens/queens-seq.c ${LACE_ADDITIONAL_SOURCES})
+if (UNIX)
+	target_link_libraries(queens-seq m)
+endif()
 
-add_executable(matmul-lace benchmarks/matmul/matmul-lace.c lace-8.c lace-8.h)
-set_target_properties(matmul-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(matmul-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(matmul-lace pthread m ${HWLOC_LIB})
+add_executable(matmul-lace benchmarks/matmul/matmul-lace.c "${PROJECT_BINARY_DIR}/lace-8.c" lace-8.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(matmul-lace getopt)
+endif()
+target_link_libraries(matmul-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(matmul-lace m)
+endif()
 
-add_executable(matmul-seq benchmarks/matmul/matmul-seq.c)
-target_link_libraries(matmul-seq m)
+add_executable(matmul-seq benchmarks/matmul/matmul-seq.c ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(matmul-seq getopt)
+endif()
+if (UNIX)
+	target_link_libraries(matmul-seq m)
+endif()
 
 #add_executable(matmul-lace-prof benchmarks/matmul/matmul-lace.c lace-8.c lace-8.h)
 #set_target_properties(matmul-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 #set_target_properties(matmul-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-#target_link_libraries(matmul-lace-prof pthread m profiler ${HWLOC_LIB})
+#target_link_libraries(matmul-lace-prof ${PTHREAD_LIB} m profiler ${HWLOC_LIB})
 
-add_executable(knapsack-lace benchmarks/knapsack/knapsack-lace.c lace-4.c lace-4.h)
-set_target_properties(knapsack-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(knapsack-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(knapsack-lace pthread m ${HWLOC_LIB})
+add_executable(knapsack-lace benchmarks/knapsack/knapsack-lace.c "${PROJECT_BINARY_DIR}/lace-4.c" lace-4.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(knapsack-lace getopt)
+endif()
+target_link_libraries(knapsack-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(knapsack-lace m)
+endif()
 
-add_executable(strassen-lace benchmarks/strassen/strassen-lace.c lace-7.c lace-7.h)
-set_target_properties(strassen-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(strassen-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(strassen-lace pthread m ${HWLOC_LIB})
+add_executable(strassen-lace benchmarks/strassen/strassen-lace.c "${PROJECT_BINARY_DIR}/lace-7.c" lace-7.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(strassen-lace getopt)
+endif()
+target_link_libraries(strassen-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(strassen-lace m)
+endif()
 
 #add_executable(strassen-lace-prof benchmarks/strassen/strassen-lace.c lace-7.c lace-7.h)
 #set_target_properties(strassen-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 #set_target_properties(strassen-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-#target_link_libraries(strassen-lace-prof pthread m profiler  ${HWLOC_LIB})
+#target_link_libraries(strassen-lace-prof ${PTHREAD_LIB} m profiler  ${HWLOC_LIB})
 
-add_executable(cilksort-lace benchmarks/cilksort/cilksort-lace.c lace-5.c lace-5.h)
-set_target_properties(cilksort-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(cilksort-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(cilksort-lace pthread m ${HWLOC_LIB})
+add_executable(cilksort-lace benchmarks/cilksort/cilksort-lace.c "${PROJECT_BINARY_DIR}/lace-5.c" lace-5.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(cilksort-lace getopt)
+endif()
+target_link_libraries(cilksort-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(cilksort-lace m)
+endif()
 
-add_executable(cilksort-seq benchmarks/cilksort/cilksort-seq.c)
-target_link_libraries(cilksort-seq m)
+add_executable(cilksort-seq benchmarks/cilksort/cilksort-seq.c ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(cilksort-seq getopt)
+endif()
+if (UNIX)
+	target_link_libraries(cilksort-seq m)
+endif()
 
 #add_executable(cilksort-lace-prof benchmarks/cilksort/cilksort-lace.c lace-5.c lace-5.h)
 #set_target_properties(cilksort-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 #set_target_properties(cilksort-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-#target_link_libraries(cilksort-lace-prof pthread m profiler ${HWLOC_LIB})
+#target_link_libraries(cilksort-lace-prof ${PTHREAD_LIB} m profiler ${HWLOC_LIB})
 
-add_executable(dfs-lace benchmarks/dfs/dfs-lace.c lace-1.c lace-1.h)
-set_target_properties(dfs-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(dfs-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(dfs-lace pthread m ${HWLOC_LIB})
+add_executable(dfs-lace benchmarks/dfs/dfs-lace.c "${PROJECT_BINARY_DIR}/lace-1.c" lace-1.h ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(dfs-lace getopt)
+endif()
+target_link_libraries(dfs-lace ${PTHREAD_LIB} ${HWLOC_LIB})
+if (UNIX)
+	target_link_libraries(dfs-lace m)
+endif()
 
-add_executable(dfs-seq benchmarks/dfs/dfs-seq.c)
-target_link_libraries(dfs-seq m)
+add_executable(dfs-seq benchmarks/dfs/dfs-seq.c ${LACE_ADDITIONAL_SOURCES})
+if (MSVC)
+	target_link_libraries(dfs-seq getopt)
+endif()
+if (UNIX)
+	target_link_libraries(dfs-seq m)
+endif()
