--- a/lace.c.in
+++ b/lace.c.in
@@ -17,14 +17,32 @@
 #include <lace-@LACE_TASKPARAMETER@.h>
 
 #include <errno.h>
+#ifdef LACE_CONFIG_HAVE_SCHED_H
 #include <sched.h> // for sched_getaffinity
+#endif
+
+#ifdef _MSC_VER
+#include <windows.h>
+#endif
+
 #include <stdio.h>  // for fprintf
 #include <stdlib.h> // for memalign, malloc
 #include <string.h> // for memset
-#include <sys/mman.h> // for mprotect
+
+#ifdef LACE_CONFIG_HAVE_SYSTIME_H
 #include <sys/time.h> // for gettimeofday
-#include <pthread.h>
+#else
+#include "windows/windows_helper.h"
+#endif
+
+#ifdef LACE_CONFIG_HAVE_SYSMMAN_H
+#include <sys/mman.h> // for mprotect
+#endif
+
+#ifdef LACE_CONFIG_HAVE_UNISTD_H
 #include <unistd.h>
+#endif
+
 #include <assert.h>
 
 #ifndef USE_HWLOC
@@ -120,20 +138,45 @@ lace_default_stacksize()
 }
 
 #if LACE_PIE_TIMES
+
 static uint64_t count_at_start, count_at_end;
+#ifdef _MSC_VER
+static LARGE_INTEGER us_elapsed_timer;
+#else
 static long long unsigned us_elapsed_timer;
+#endif
 
 static void
 us_elapsed_start(void)
 {
-    struct timeval now;
+#ifdef _MSC_VER
+	if (!QueryPerformanceCounter(&us_elapsed_timer)) {
+		fprintf(stderr, "Could not query performance counter!\n");
+	}
+#else
+	struct timeval now;
     gettimeofday(&now, NULL);
     us_elapsed_timer = now.tv_sec * 1000000LL + now.tv_usec;
+#endif
 }
 
 static long long unsigned
 us_elapsed(void)
 {
+#ifdef _MSC_VER
+	LARGE_INTEGER li;
+	if (!QueryPerformanceFrequency(&li)) {
+		fprintf(stderr, "Could not query performance frequency!\n");
+	}
+
+	double PCFreq = ((double)(li.QuadPart))/1000000.0; // microseconds
+
+	if (!QueryPerformanceCounter(&li)) {
+		fprintf(stderr, "Could not query performance counter!\n");
+	}
+	
+	return (unsigned long long)((double)(li.QuadPart-us_elapsed_timer.QuadPart)/PCFreq);
+#else
     struct timeval now;
     long long unsigned t;
 
@@ -142,6 +185,7 @@ us_elapsed(void)
     t = now.tv_sec * 1000000LL + now.tv_usec;
 
     return t - us_elapsed_timer;
+#endif
 }
 #endif
 
@@ -281,12 +325,22 @@ lace_init_worker(int worker, size_t dq_size)
     lock_release();
 #else
     // Allocate memory...
-    if (posix_memalign((void**)&wt, LINE_SIZE, sizeof(Worker)) ||
+#ifndef _MSC_VER
+	if (posix_memalign((void**)&wt, LINE_SIZE, sizeof(Worker)) ||
         posix_memalign((void**)&w, LINE_SIZE, sizeof(WorkerP)) || 
         posix_memalign((void**)&w->dq, LINE_SIZE, dq_size * sizeof(Task))) {
             fprintf(stderr, "Lace error: Unable to allocate memory for the Lace worker!\n");
             exit(1);
     }
+#else
+	wt = _aligned_malloc(sizeof(Worker), LINE_SIZE);
+	w = _aligned_malloc(sizeof(WorkerP), LINE_SIZE);
+	w->dq = _aligned_malloc(dq_size * sizeof(Task), LINE_SIZE);
+	if ((wt == NULL) || (w == NULL) || (w->dq == NULL)) {
+            fprintf(stderr, "Lace error: Unable to allocate memory for the Lace worker!\n");
+            exit(1);
+    }
+#endif
 #endif
 
     // Initialize public worker data
@@ -548,7 +602,13 @@ lace_spawn_worker(int worker, size_t stacksize, void* (*fun)(void*), void* arg)
     // Determine stack size
     if (stacksize == 0) stacksize = default_stacksize;
 
-    size_t pagesize = sysconf(_SC_PAGESIZE);
+#ifndef _MSC_VER
+	size_t pagesize = sysconf(_SC_PAGESIZE);
+#else
+	SYSTEM_INFO si;
+	GetSystemInfo(&si);
+	size_t pagesize = si.dwPageSize;
+#endif
     stacksize = (stacksize + pagesize - 1) & ~(pagesize - 1); // ceil(stacksize, pagesize)
 
 #if USE_HWLOC
@@ -564,22 +624,43 @@ lace_spawn_worker(int worker, size_t stacksize, void* (*fun)(void*), void* arg)
         exit(1);
     }
 #else
+    
+#ifndef _MSC_VER
     void *stack_location = mmap(NULL, stacksize + pagesize, PROT_READ | PROT_WRITE, MAP_ANON | MAP_PRIVATE, 0, 0);
     if (stack_location == MAP_FAILED) {
         fprintf(stderr, "Lace error: Cannot allocate program stack, errno=%d!\n", errno);
         exit(1);
     }
+#else
+	void *stack_location = VirtualAlloc(NULL, stacksize + pagesize, MEM_RESERVE | MEM_COMMIT, PAGE_EXECUTE_READWRITE);
+	if (stack_location == NULL) {
+        fprintf(stderr, "Lace error: Cannot allocate program stack, errno=%d!\n", GetLastError());
+        exit(1);
+    }
+#endif
 #endif
 
+#ifndef _MSC_VER
     if (0 != mprotect(stack_location, pagesize, PROT_NONE)) {
+#else
+	DWORD flOldProtect;
+	if (0 != VirtualProtect(stack_location, pagesize, PAGE_GUARD, &flOldProtect)) {
+#endif
         fprintf(stderr, "Lace error: Unable to protect the allocated program stack with a guard page!\n");
         exit(1);
     }
     stack_location = (uint8_t *)stack_location + pagesize; // skip protected page.
+#ifndef _MSC_VER
     if (0 != pthread_attr_setstack(&worker_attr, stack_location, stacksize)) {
-        fprintf(stderr, "Lace error: Unable to set the pthread stack in Lace!\n");
+	    fprintf(stderr, "Lace error: Unable to set the pthread stack in Lace!\n");
         exit(1);
     }
+#else
+	if ((0 != pthread_attr_setstackaddr(&worker_attr, stack_location)) || (0 != pthread_attr_setstacksize(&worker_attr, stacksize))) {
+	    fprintf(stderr, "Lace error: Unable to set the pthread stack in Lace!\n");
+        exit(1);
+    }
+#endif
 
     workers_init[worker].stack = stack_location;
     workers_init[worker].stacksize = stacksize;
@@ -640,11 +721,20 @@ lace_init(int n, size_t dqsize)
     pthread_barrier_init(&suspend_barrier, NULL, n_workers);
 
     // Allocate array with all workers
+#ifndef _MSC_VER
     if (posix_memalign((void**)&workers, LINE_SIZE, n_workers*sizeof(Worker*)) != 0 ||
         posix_memalign((void**)&workers_p, LINE_SIZE, n_workers*sizeof(WorkerP*)) != 0) {
         fprintf(stderr, "Lace error: unable to allocate memory!\n");
         exit(1);
     }
+#else
+	workers = _aligned_malloc(n_workers*sizeof(Worker*), LINE_SIZE);
+	workers_p = _aligned_malloc(n_workers*sizeof(WorkerP*), LINE_SIZE);
+	if ((workers == NULL) || (workers_p == NULL)) {
+        fprintf(stderr, "Lace error: unable to allocate memory!\n");
+        exit(1);
+    }
+#endif
 
     // Create pthread key
     pthread_key_create(&worker_key, NULL);
@@ -779,18 +869,18 @@ lace_count_report_file(FILE *file)
 
 #if LACE_COUNT_STEALS && LACE_COUNT_TASKS
     for (i=0;i<n_workers;i++) {
-		uint64_t stealsAndLeaps = (workers_p[i]->ctr[CTR_steals]+workers_p[i]->ctr[CTR_leaps]);
-		if (stealsAndLeaps == 0) {
+		uint64_t steals_and_leaps = (workers_p[i]->ctr[CTR_steals]+workers_p[i]->ctr[CTR_leaps]);
+		if (steals_and_leaps == 0) {
 			fprintf(file, "Tasks per steal (%d): INFTY (no steals/leaps)\n", i);
 		} else {
-			fprintf(file, "Tasks per steal (%d): %zu\n", i, workers_p[i]->ctr[CTR_tasks]/stealsAndLeaps);
+			fprintf(file, "Tasks per steal (%d): %zu\n", i, workers_p[i]->ctr[CTR_tasks]/steals_and_leaps);
 		}
     }
-	uint64_t allStealsAndLeaps = (ctr_all[CTR_steals]+ctr_all[CTR_leaps]);
-	if (allStealsAndLeaps == 0) {
+	uint64_t all_steals_and_leaps = (ctr_all[CTR_steals]+ctr_all[CTR_leaps]);
+	if (all_steals_and_leaps == 0) {
 		fprintf(file, "Tasks per steal (sum): INFTY (no steals/leaps)\n");
 	} else {
-		fprintf(file, "Tasks per steal (sum): %zu\n", ctr_all[CTR_tasks]/allStealsAndLeaps);
+		fprintf(file, "Tasks per steal (sum): %zu\n", ctr_all[CTR_tasks]/all_steals_and_leaps);
 	}
     fprintf(file, "\n");
 #endif
@@ -882,8 +972,8 @@ lace_exec_in_new_frame(WorkerP *__lace_worker, Task *__lace_dq_head, Task *root)
         old.ts.tail = wt->ts.ts.tail;
 
         TailSplit ts_new;
-        ts_new.ts.tail = __lace_dq_head - __lace_worker->dq;
-        ts_new.ts.split = __lace_dq_head - __lace_worker->dq;
+        ts_new.ts.tail = (uint32_t)(__lace_dq_head - __lace_worker->dq);
+        ts_new.ts.split = (uint32_t)(__lace_dq_head - __lace_worker->dq);
         wt->ts.v = ts_new.v;
 
         __lace_worker->split = __lace_dq_head;
