Add support for out-of-source-dir compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,14 +46,14 @@ else()
   set (LACE_COUNT_SPLITS "LACE_COUNT_SPLITS=0")
 endif()
 
-add_custom_command(OUTPUT lace-1.c lace-1.h COMMAND ./prepare.sh 1 DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-2.c lace-2.h COMMAND ./prepare.sh 2 DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-3.c lace-3.h COMMAND ./prepare.sh 3 DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-4.c lace-4.h COMMAND ./prepare.sh 4 DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-5.c lace-5.h COMMAND ./prepare.sh 5 DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-6.c lace-6.h COMMAND ./prepare.sh 6 DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-7.c lace-7.h COMMAND ./prepare.sh 7 DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-8.c lace-8.h COMMAND ./prepare.sh 8 DEPENDS lace.sh lace.c)
+add_custom_command(OUTPUT lace-1.c lace-1.h COMMAND ./prepare.sh 1 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
+add_custom_command(OUTPUT lace-2.c lace-2.h COMMAND ./prepare.sh 2 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
+add_custom_command(OUTPUT lace-3.c lace-3.h COMMAND ./prepare.sh 3 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
+add_custom_command(OUTPUT lace-4.c lace-4.h COMMAND ./prepare.sh 4 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
+add_custom_command(OUTPUT lace-5.c lace-5.h COMMAND ./prepare.sh 5 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
+add_custom_command(OUTPUT lace-6.c lace-6.h COMMAND ./prepare.sh 6 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
+add_custom_command(OUTPUT lace-7.c lace-7.h COMMAND ./prepare.sh 7 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
+add_custom_command(OUTPUT lace-8.c lace-8.h COMMAND ./prepare.sh 8 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
 
 set(CMAKE_C_FLAGS "-g -O3 -Wall -Wextra -Werror")
 
