Now by default lace.h contains macros for up to 6 parameters, so each Task is exactly 64 bytes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,16 +46,9 @@ else()
   set (LACE_COUNT_SPLITS "LACE_COUNT_SPLITS=0")
 endif()
 
-add_custom_command(OUTPUT lace-1.c lace-1.h COMMAND ./prepare.sh 1 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-2.c lace-2.h COMMAND ./prepare.sh 2 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-3.c lace-3.h COMMAND ./prepare.sh 3 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-4.c lace-4.h COMMAND ./prepare.sh 4 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-5.c lace-5.h COMMAND ./prepare.sh 5 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-6.c lace-6.h COMMAND ./prepare.sh 6 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-7.c lace-7.h COMMAND ./prepare.sh 7 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
-add_custom_command(OUTPUT lace-8.c lace-8.h COMMAND ./prepare.sh 8 "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
+add_custom_command(OUTPUT lace.h lace-7.h lace-8.h lace-7.c lace-8.c COMMAND ./prepare.sh "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
 
-set(CMAKE_C_FLAGS "-g -O3 -Wall -Wextra -Werror")
+set(CMAKE_C_FLAGS "-g -O3 -Wall -Wextra -Werror -I${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(lace_flags "${HWLOC_DEF};${LACE_PIE};${LACE_COUNT_TASKS};${LACE_COUNT_STEALS};${LACE_COUNT_SPLITS}")
 
@@ -68,17 +61,17 @@ target_link_libraries(fib-seq m)
 add_executable(fib-seq2 benchmarks/fib/fib-seq2.c)
 target_link_libraries(fib-seq2 m)
 
-add_executable(fib-lace benchmarks/fib/fib-lace.c lace-1.c lace-1.h)
+add_executable(fib-lace benchmarks/fib/fib-lace.c lace.c lace.h)
 set_target_properties(fib-lace PROPERTIES COMPILE_FLAGS "-I.")
 set_target_properties(fib-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 target_link_libraries(fib-lace pthread m ${HWLOC_LIB})
 
-# add_executable(fib-lace-prof benchmarks/fib/fib-lace.c lace-1.c lace-1.h)
+# add_executable(fib-lace-prof benchmarks/fib/fib-lace.c lace.h)
 # set_target_properties(fib-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 # set_target_properties(fib-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 # target_link_libraries(fib-lace-prof pthread m profiler ${HWLOC_LIB})
 
-add_executable(pi-lace benchmarks/pi/pi-lace.c lace-2.c lace-2.h)
+add_executable(pi-lace benchmarks/pi/pi-lace.c lace.c lace.h)
 set_target_properties(pi-lace PROPERTIES COMPILE_FLAGS "-I.")
 set_target_properties(pi-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 target_link_libraries(pi-lace pthread m ${HWLOC_LIB})
@@ -93,27 +86,27 @@ add_executable(uts-seq ${uts_sources} benchmarks/uts/uts-seq.c)
 set_target_properties(uts-seq PROPERTIES COMPILE_DEFINITIONS "BRG_C99_TYPES;BRG_RNG")
 target_link_libraries(uts-seq m)
 
-add_executable(uts2-lace ${uts_sources} benchmarks/uts/uts2-lace.c lace-2.c lace-2.h)
+add_executable(uts2-lace ${uts_sources} benchmarks/uts/uts2-lace.c lace.c lace.h)
 set_target_properties(uts2-lace PROPERTIES COMPILE_FLAGS "-I.")
 set_target_properties(uts2-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
 target_link_libraries(uts2-lace m pthread ${HWLOC_LIB})
 
-add_executable(uts-lace ${uts_sources} benchmarks/uts/uts-lace.c lace-2.c lace-2.h)
+add_executable(uts-lace ${uts_sources} benchmarks/uts/uts-lace.c lace.c lace.h)
 set_target_properties(uts-lace PROPERTIES COMPILE_FLAGS "-I.")
 set_target_properties(uts-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
 target_link_libraries(uts-lace m pthread ${HWLOC_LIB})
 
-# add_executable(uts-lace-prof ${uts_sources} benchmarks/uts/uts-lace.c lace-2.c lace-2.h)
+# add_executable(uts-lace-prof ${uts_sources} benchmarks/uts/uts-lace.c lace.c lace.h)
 # set_target_properties(uts-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 # set_target_properties(uts-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
 # target_link_libraries(uts-lace-prof m pthread profiler ${HWLOC_LIB})
 
-add_executable(queens-lace benchmarks/queens/queens-lace.c lace-3.c lace-3.h)
+add_executable(queens-lace benchmarks/queens/queens-lace.c lace.c lace.h)
 set_target_properties(queens-lace PROPERTIES COMPILE_FLAGS "-I.")
 set_target_properties(queens-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 target_link_libraries(queens-lace pthread m ${HWLOC_LIB})
 
-# add_executable(queens-lace-prof benchmarks/queens/queens-lace.c lace-3.c lace-3.h)
+# add_executable(queens-lace-prof benchmarks/queens/queens-lace.c lace.c lace.h)
 # set_target_properties(queens-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 # set_target_properties(queens-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 # target_link_libraries(queens-lace-prof pthread m profiler ${HWLOC_LIB})
@@ -134,7 +127,7 @@ target_link_libraries(matmul-seq m)
 #set_target_properties(matmul-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 #target_link_libraries(matmul-lace-prof pthread m profiler ${HWLOC_LIB})
 
-add_executable(knapsack-lace benchmarks/knapsack/knapsack-lace.c lace-4.c lace-4.h)
+add_executable(knapsack-lace benchmarks/knapsack/knapsack-lace.c lace.c lace.h)
 set_target_properties(knapsack-lace PROPERTIES COMPILE_FLAGS "-I.")
 set_target_properties(knapsack-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 target_link_libraries(knapsack-lace pthread m ${HWLOC_LIB})
@@ -149,7 +142,7 @@ target_link_libraries(strassen-lace pthread m ${HWLOC_LIB})
 #set_target_properties(strassen-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 #target_link_libraries(strassen-lace-prof pthread m profiler  ${HWLOC_LIB})
 
-add_executable(cilksort-lace benchmarks/cilksort/cilksort-lace.c lace-5.c lace-5.h)
+add_executable(cilksort-lace benchmarks/cilksort/cilksort-lace.c lace.c lace.h)
 set_target_properties(cilksort-lace PROPERTIES COMPILE_FLAGS "-I.")
 set_target_properties(cilksort-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 target_link_libraries(cilksort-lace pthread m ${HWLOC_LIB})
@@ -157,12 +150,12 @@ target_link_libraries(cilksort-lace pthread m ${HWLOC_LIB})
 add_executable(cilksort-seq benchmarks/cilksort/cilksort-seq.c)
 target_link_libraries(cilksort-seq m)
 
-#add_executable(cilksort-lace-prof benchmarks/cilksort/cilksort-lace.c lace-5.c lace-5.h)
+#add_executable(cilksort-lace-prof benchmarks/cilksort/cilksort-lace.c lace.c lace.h)
 #set_target_properties(cilksort-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 #set_target_properties(cilksort-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 #target_link_libraries(cilksort-lace-prof pthread m profiler ${HWLOC_LIB})
 
-add_executable(dfs-lace benchmarks/dfs/dfs-lace.c lace-1.c lace-1.h)
+add_executable(dfs-lace benchmarks/dfs/dfs-lace.c lace.c lace.h)
 set_target_properties(dfs-lace PROPERTIES COMPILE_FLAGS "-I.")
 set_target_properties(dfs-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 target_link_libraries(dfs-lace pthread m ${HWLOC_LIB})
